testsuite/tests/builtins/stream_methods/reduce/missing_fn_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.reduce(init=0))
   │       ────────┬───────  
   │               ╰───────── Missing value for the "fn" parameter
───╯
